<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#74F8F4F4"
        android:padding="8dp"
        tools:context=".ui.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtopen_access_journals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:text="@string/open_access_journals"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerOpenAccessJournals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:ignore="UnusedAttribute"
                    tools:itemCount="4"
                    tools:listitem="@layout/openaccess_journal_item" />

                <TextView
                    android:id="@+id/txtSubjectByJournal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:text="@string/journals_by_subject"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSubjectByJournal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:ignore="UnusedAttribute"
                    tools:itemCount="4"
                    tools:listitem="@layout/openaccess_journal_item" />

                <TextView
                    android:id="@+id/txtclinical_medical_journals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:text="@string/clinical_medical_journals"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerclinical_medical_journals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:ignore="UnusedAttribute"
                    tools:itemCount="4"
                    tools:listitem="@layout/openaccess_journal_item" />


                <TextView
                    android:id="@+id/txtCurrentIssueName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/current_issue_highlights"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerHomeCurrentIssue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="UnusedAttribute"
                    tools:itemCount="4"
                    tools:listitem="@layout/current_issue_item" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Retry"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>


</layout>